@@ -17,11 +17,14 @@
  */
 package VASSAL.build.module;
 
+import VASSAL.build.AbstractFolder;
 import VASSAL.build.AbstractToolbarItem;
 import VASSAL.build.AutoConfigurable;
+import VASSAL.build.Buildable;
 import VASSAL.build.GameModule;
 import VASSAL.build.module.documentation.HelpFile;
 import VASSAL.build.module.properties.MutableProperty;
+import VASSAL.build.module.properties.PropertySource;
 import VASSAL.command.Command;
 import VASSAL.command.NullCommand;
 import VASSAL.command.PlayAudioClipCommand;
@@ -132,6 +135,12 @@ public class DoActionButton extends AbstractToolbarItem
       rollAction
     ));
     launch = getLaunchButton(); // for compatibility
+  }
+
+  // This only exists so SpecialDiceButton can avoid calling the other constructor
+  @SuppressWarnings("PMD.UnusedFormalParameter")
+  protected DoActionButton(boolean dummy) { 
+
   }
 
   public static String getConfigureTypeName() {
@@ -526,6 +535,16 @@ public class DoActionButton extends AbstractToolbarItem
   protected void doActions() throws RecursionLimitException {
     final Command c = new NullCommand();
     final GameModule mod = GameModule.getGameModule();
+    final PropertySource ps;
+
+    Buildable parent = this.getAncestor();
+    if (parent instanceof AbstractFolder) {
+      parent = ((AbstractFolder)parent).getNonFolderAncestor();
+      if (!(parent instanceof PropertySource)) {
+        parent = mod;
+      }
+    }
+    ps = (PropertySource)parent;
 
     // Non looping case
     if (! doLoop) {
@@ -543,58 +562,60 @@ public class DoActionButton extends AbstractToolbarItem
 
     // Set up counters for a counted loop
     int loopCounter = 0;
-    int loopCountLimit = 0;
+    int loopCountLimit = 1; //BR// This ugly setting lets non-counted loops execute, while stopping loopCount of <= 0 from sneaking a loop in
     if (LoopControl.LOOP_COUNTED.equals(loopType)) {
-      loopCountLimit = loopCount.getTextAsInt(mod, Resources.getString("Editor.LoopControl.loop_count"), this); //$NON-NLS-1$
+      loopCountLimit = loopCount.getTextAsInt(ps, Resources.getString("Editor.LoopControl.loop_count"), this); //$NON-NLS-1$
     }
 
     RecursionLimitException loopException = null;
 
-    for (;;) {
+    if (loopCountLimit > 0) {
+      for (;;) {
 
-      // While loop - test condition is still true before actions
-      if (LoopControl.LOOP_WHILE.equals(loopType)) {
-        if (!whileExpression.isTrue(mod)) {
+        // While loop - test condition is still true before actions
+        if (LoopControl.LOOP_WHILE.equals(loopType)) {
+          if (!whileExpression.isTrue(ps)) {
+            break;
+          }
+        }
+
+        // Execute the actions and catch and looping. Save any
+        // loop Exception to be thrown after the post-loop code
+        // to ensure post-loop key is executed.
+        try {
+          executeActions(c);
+        }
+        catch (RecursionLimitException ex) {
+          loopException = ex;
           break;
         }
-      }
 
-      // Execute the actions and catch and looping. Save any
-      // loop Exception to be thrown after the post-loop code
-     // to ensure post-loop key is executed.
-      try {
-        executeActions(c);
-      }
-      catch (RecursionLimitException ex) {
-        loopException = ex;
-        break;
-      }
-
-      // Until loop - test condition is not false after loop
-      if (LoopControl.LOOP_UNTIL.equals(loopType)) {
-        if (untilExpression.isTrue(mod)) {
-          break;
+        // Until loop - test condition is not false after loop
+        if (LoopControl.LOOP_UNTIL.equals(loopType)) {
+          if (untilExpression.isTrue(ps)) {
+            break;
+          }
         }
-      }
 
-      // Counted loop - Check if looped enough times
-      loopCounter++;
-      if (LoopControl.LOOP_COUNTED.equals(loopType)) {
-        if (loopCounter >= loopCountLimit) {
-          break;
+        // Counted loop - Check if looped enough times
+        loopCounter++;
+        if (LoopControl.LOOP_COUNTED.equals(loopType)) {
+          if (loopCounter >= loopCountLimit) {
+            break;
+          }
         }
-      }
-      // Otherwise check for too much looping.
-      else {
-        if (loopCounter >= LoopControl.LOOP_LIMIT) {
-          loopException = new RecursionLimitException(this);
-          break;
+        // Otherwise check for too much looping.
+        else {
+          if (loopCounter >= LoopControl.LOOP_LIMIT) {
+            loopException = new RecursionLimitException(this);
+            break;
+          }
         }
-      }
 
-      // Increment the Index Variable
-      indexValue += indexStep;
-      setIndexPropertyValue();
+        // Increment the Index Variable
+        indexValue += indexStep;
+        setIndexPropertyValue();
+      }
     }
 
     // Issue the Post-loop key
@@ -619,6 +640,16 @@ public class DoActionButton extends AbstractToolbarItem
    */
   protected void executeActions(Command command) throws RecursionLimitException {
     final GameModule mod = GameModule.getGameModule();
+    final PropertySource ps;
+
+    Buildable parent = this.getAncestor();
+    if (parent instanceof AbstractFolder) {
+      parent = ((AbstractFolder)parent).getNonFolderAncestor();
+      if (!(parent instanceof PropertySource)) {
+        parent = mod;
+      }
+    }
+    ps = (PropertySource)parent;
 
     // GameModule.pauseLogging() returns false if logging is already paused by
     // a higher level component.
@@ -627,14 +658,16 @@ public class DoActionButton extends AbstractToolbarItem
     try {
       RecursionLimiter.startExecution(this);
       if (doReport) {
-        final String report = "* " + reportFormat.getLocalizedText(mod, this, "Editor.report_format");
-        final Command c = new Chatter.DisplayText(mod.getChatter(), report);
-        c.execute();
-        mod.sendAndLog(c);
+        final String report = reportFormat.getLocalizedText(ps, this, "Editor.report_format");
+        if (!report.isEmpty()) {
+          final Command c = new Chatter.DisplayText(mod.getChatter(), "* " + report);
+          c.execute();
+          mod.sendAndLog(c);
+        }
       }
 
       if (doSound) {
-        final String clipName = new FormattedString(soundClip).getText(mod, this, "Editor.DoAction.sound_clip");
+        final String clipName = new FormattedString(soundClip).getText(ps, this, "Editor.DoAction.sound_clip");
         final Command c = new PlayAudioClipCommand(clipName);
         c.execute();
         mod.sendAndLog(c);
@@ -726,7 +759,7 @@ public class DoActionButton extends AbstractToolbarItem
    */
   @Override
   public List<String> getFormattedStringList() {
-    return List.of(reportFormat.getFormat());
+    return Arrays.asList(reportFormat.getFormat());
   }
 
   /**
@@ -734,7 +767,7 @@ public class DoActionButton extends AbstractToolbarItem
    */
   @Override
   public List<String> getPropertyList() {
-    return List.of(indexProperty);
+    return Arrays.asList(indexProperty);
   }
 
   /**
